--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ disqusShortname = "alexshvid" # Enable or disable Disqus.
 
     snsShare = true # new add
 
-    thumbnail = "images/tn.png" # default sns thumbnail
+    thumbnail = "images/screenshot.png" # default sns thumbnail
 
     # Multilanguage mode
     langseparator = "|" # Separates menus from language selectors when site is multilingual.
