--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://schwid.com/" # Hostname (and path) to the root.
-title = "Alex Shvid" # Site title.
+title = "Alex Shvid - Personal Web Site" # Site title.
 theme = "coder-portfolio" # Set the theme.
 languagecode = "en" # The site’s language code used to generate RSS.
 defaultcontentlanguage = "en" # The default content language.
